--- a/config/dev_stage/config.toml
+++ b/config/dev_stage/config.toml
@@ -1,8 +1,8 @@
 baseURL = "https://gcappbesp307.health.dohmh.nycnet/dev-stage/"
 [params]
-    data_branch = "feature-pagefind-search"
+    data_branch = "staging"
 
 [caches]
     [caches.getresource]
       dir = ':cacheDir/:project'
-      maxAge = -1
+      maxAge = 0
