--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "arquero": "^5.1.0",
+    "chalk": "^5.3.0",
     "chroma-js": "^2.4.2",
     "core-js": "^3.33.0",
     "d3": "^7.8.2",
