--- a/.github/workflows/hugo-build-to-prod-prod.yml
+++ b/.github/workflows/hugo-build-to-prod-prod.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v4
         with:
-          node-version: lts/*
+          node-version: 22.5.x
           cache: "npm"
 
       # set up cache for node modules
