--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -10,6 +10,7 @@ publishDir = "docs"
 paginate = 9
 ignoreFiles = ['Simplified.Chinese', 'Spanish']
 # enableGitInfo = true
+timeZone = 'America/New_York'
 
 [params]
   data_repo = "https://raw.githubusercontent.com/nychealth/EHDP-data/"
