--- a/.github/workflows/hugo-build-to-appscan-deploy.yml
+++ b/.github/workflows/hugo-build-to-appscan-deploy.yml
@@ -98,7 +98,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
 
       # set up Hugo
 
