--- a/.github/workflows/hugo-build-to-dev-prod.yml
+++ b/.github/workflows/hugo-build-to-dev-prod.yml
@@ -93,7 +93,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
 
       # set up Hugo
 
