--- a/.github/workflows/hugo-build-to-dev-stage.yml
+++ b/.github/workflows/hugo-build-to-dev-stage.yml
@@ -95,7 +95,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: npm install
+        run: npm ci
 
       # set up Hugo
 
