add npm ls to workflows

--- a/.github/workflows/hugo-build-to-appscan-deploy.yml
+++ b/.github/workflows/hugo-build-to-appscan-deploy.yml
@@ -88,6 +88,14 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      # list dependencies
+      
+      - name: List dependencies
+        run: npm ls
+
+      - name: List sub-dependencies
+        run: npm ls --all
+        
       # update npm dependencies (if cached)
 
       - name: Update dependencies
