--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -100,6 +100,14 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      # list dependencies
+      
+      - name: List dependencies
+        run: npm ls
+
+      - name: List sub-dependencies
+        run: npm ls --all
+        
       # update npm dependencies (if cached)
 
       - name: Update dependencies
