--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -99,6 +99,18 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
+        
+      # update npm dependencies (if cached)
+
+      # - name: Update dependencies
+      #   if: steps.cache-nodemodules.outputs.cache-hit == 'true'
+      #   run: npm update
+
+      # install npm dependencies (if not cached)
+
+      - name: Install dependencies
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+        run: npm ci
 
       # list dependencies
       
@@ -107,18 +119,6 @@ jobs:
 
       - name: List sub-dependencies
         run: npm ls --all
-        
-      # update npm dependencies (if cached)
-
-      - name: Update dependencies
-        if: steps.cache-nodemodules.outputs.cache-hit == 'true'
-        run: npm update
-
-      # install npm dependencies (if not cached)
-
-      - name: Install dependencies
-        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: npm ci
 
       # set up Hugo
 
