trying to set default branch

--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -9,8 +9,9 @@ on:
 
       branch:
         description: Branch to build
-        required: true
+        required: false
         type: string
+        default: ${{ github.ref_name }}
 
       publish-branch:
         description: Branch name for build files
