--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -109,7 +109,7 @@ jobs:
       # install npm dependencies (if not cached)
 
       - name: Install dependencies
-        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+        # if: steps.cache-nodemodules.outputs.cache-hit != 'true'
         run: npm ci --include optional
 
       # list dependencies
