trying to set default branch

--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -42,7 +42,7 @@ jobs:
   build:
     runs-on: ubuntu-20.04
     # can't use the "env" context at the job level, only in steps, so need to eval the conditional again
-    name: Build `${{ inputs.branch }} to builds/${{ inputs.publish-branch && inputs.publish-branch || inputs.branch }}`
+    name: Build `${{ inputs.branch && inputs.branch || github.ref_name && github.ref_name }} to builds/${{ inputs.publish-branch && inputs.publish-branch || inputs.branch && inputs.branch || github.ref_name && github.ref_name }}`
 
     # wait for other triggered jobs to finish before running this
 
