--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -91,6 +91,9 @@ jobs:
       - name: Install dependencies
         run: npm install --include optional
 
+      - name: Install pagefind architecture sub-dependency
+        run: npm install @pagefind/linux-x64
+
       # list dependencies
       
       - name: List dependencies
