--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -86,13 +86,34 @@ jobs:
           cache: "npm"
 
 
+      # set up cache for node modules
+
+      - name: Cache node_modules
+        id: cache-nodemodules
+        uses: actions/cache@v4
+        env:
+          cache-name: cache-node-modules
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+      # update npm dependencies (if cached)
+
+      - name: Update dependencies
+        if: steps.cache-nodemodules.outputs.cache-hit == 'true'
+        run: npm update
+
       # install npm dependencies (if not cached)
 
       - name: Install dependencies
-        run: npm install --include optional
-
-      - name: Install pagefind architecture sub-dependency
-        run: npm install @pagefind/linux-x64
+        if: steps.cache-nodemodules.outputs.cache-hit != 'true'
+        run: |
+          npm install @pagefind/linux-x64
+          npm ci
 
       # list dependencies
       
