--- a/.github/workflows/hugo-build-any-branch.yml
+++ b/.github/workflows/hugo-build-any-branch.yml
@@ -104,9 +104,7 @@ jobs:
       # update npm dependencies (if cached)
 
       - name: Prune dependencies
-        run: | 
-          npm uninstall @pagefind/linux-x64
-          npm prune
+        run: npm prune
 
       # update npm dependencies (if cached)
 
@@ -118,9 +116,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: |
-          # npm install @pagefind/linux-x64
-          npm ci
+        run: npm ci
 
       # list dependencies
       
