--- a/.github/workflows/hugo-build-to-dev-stage.yml
+++ b/.github/workflows/hugo-build-to-dev-stage.yml
@@ -85,6 +85,11 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
+      # prune node_modules
+
+      - name: Prune dependencies
+        run: npm prune
+
       # update npm dependencies (if cached)
 
       - name: Update dependencies
@@ -95,9 +100,7 @@ jobs:
 
       - name: Install dependencies
         if: steps.cache-nodemodules.outputs.cache-hit != 'true'
-        run: |
-          npm install @pagefind/linux-x64
-          npm ci
+        run: npm ci
 
       # list dependencies
       
