--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -25,7 +25,7 @@ timeZone = "America/New_York"
   bgColor = '#ffffff'
   hint = 'photo'
   quality = 95
-  resampleFilter = 'MitchellNetravali'
+  resampleFilter = 'CatmullRom'
 
 [markup.goldmark.parser]
   autoHeadingID = false # remove md headings from pagefind results
