--- a/.github/workflows/hugo-build-to-prod-prod.yml
+++ b/.github/workflows/hugo-build-to-prod-prod.yml
@@ -64,7 +64,7 @@ jobs:
 
       # set up node and cache for npm
 
-      - name: Setup node
+      - name: Set up node
         uses: actions/setup-node@v4
         with:
           node-version: 22.5.x
@@ -112,7 +112,7 @@ jobs:
 
       # set up Hugo
 
-      - name: Hugo setup
+      - name: Set up Hugo
         uses: peaceiris/actions-hugo@v3
         with:
           hugo-version: "0.122.0"
@@ -120,7 +120,7 @@ jobs:
 
       # build site with Hugo
 
-      - name: Hugo Build
+      - name: Build site with Hugo
         run: | 
           export HUGO_GIT_LAST_HASH=${{ steps.last_commit.outputs.last_hash }}
           export HUGO_GIT_LAST_MSG=${{ steps.last_commit.outputs.last_msg }}
@@ -135,7 +135,7 @@ jobs:
 
       # commit built index
 
-      - name: Commit changes to PagesIndex.json, package.json, & package-lock.json
+      - name: Commit changes to package.json & package-lock.json
         uses: elstudio/actions-js-build/commit@v4
         with:
           commitMessage: Update index & NPM package list
