--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.6.0",
     "arquero": "^6.0.1",
+    "bootstrap": "^4.3.1",
     "d3": "^7.9.0",
     "datatables.net": "^1.13.1",
     "datatables.net-buttons": "^2.3.3",
