--- a/package.json
+++ b/package.json
@@ -9,9 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "arquero": "^5.1.0",
-    "chalk": "^5.3.0",
     "chroma-js": "^2.4.2",
-    "core-js": "^3.33.0",
     "d3": "^7.8.2",
     "datatables.net": "^1.13.5",
     "datatables.net-buttons": "^2.4.1",
@@ -23,23 +21,15 @@
     "georaster": "^1.6.0",
     "georaster-layer-for-leaflet": "^3.10.0",
     "git-removed-branches": "^2.0.1",
-    "grunt": "^1.6.1",
-    "grunt-cli": "^1.4.3",
-    "hugo": "0.0.3",
     "jquery-flexdatalist": "^2.3.0",
     "leaflet": "^1.9.4",
     "leaflet-easybutton": "^2.4.0",
     "leaflet-pip": "^1.1.0",
-    "lunr": "^2.3.9",
-    "pdfmake": "^0.2.7",
     "seedrandom": "^3.0.5",
-    "string": "^3.3.3",
     "topojson-client": "^3.1.0",
-    "url": "^0.11.3",
     "vega": "^5.22.1",
     "vega-embed": "^6.21.0",
-    "vega-lite": "^5.6.0",
-    "yamljs": "^0.3.0"
+    "vega-lite": "^5.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
