--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.3.0",
     "arquero": "^5.1.0",
+    "bootstrap": "^4.3.1",
     "chroma-js": "^2.4.2",
     "d3": "^7.8.2",
     "datatables.net": "^1.13.5",
