switch data_branch

--- a/config/dev_stage/config.toml
+++ b/config/dev_stage/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://gcappbesp307.health.dohmh.nycnet/dev-stage/"
 [params]
-    data_branch = "staging"
+    data_branch = "feature-aq-actions-days-labels"
 
 [caches]
     [caches.getresource]
